Search bar spill over fix
Fix for mobile ui search bar spill over

--- a/src/Jackett/Content/custom.css
+++ b/src/Jackett/Content/custom.css
@@ -213,7 +213,7 @@ pre {
 }
 
 .dataTables_filter input {
-    width: 400px 
+    width: 40% 
 }
 
 #unconfigured-indexers-template {
